Added Graphics\Graph to gitignore as it is too heavy

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Article/
 StLuc/
 SPSS/
 Output/Models/
+Graphics/Graph
 dMod.xlsx
 Output/OutputComputation.JPG
 DataPreparation/LassoRegressionExemple.R
