--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ Article/
 StLuc/
 SPSS/
 Output/Models/
-Graphics/Graph
+Graphics/Graph/
 dMod.xlsx
 Output/OutputComputation.JPG
 DataPreparation/LassoRegressionExemple.R
